fix: whitelist ip for zone